Fixed testing using Junit5