@@ -1,7 +1,3 @@
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.10.2'
-}
-
 buildscript {
     repositories {
         jcenter()
@@ -58,11 +54,14 @@ repositories {
 }
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile "org.slf4j:slf4j-api:1.7.25"
 
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
+    testCompileOnly "org.junit.jupiter:junit-jupiter-api:5.3.2"
     testCompile "org.assertj:assertj-core:3.10.0"
-    testCompile 'com.caucho:hessian:4.0.38'
+    testCompile "com.caucho:hessian:4.0.51"
+
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.2"
+    testRuntimeOnly "org.slf4j:slf4j-nop:1.7.25"
 }
 
 def pomConfig = {
@@ -145,43 +144,47 @@ afterEvaluate {
         jcenter()
     }
 
-        compileJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                options.compilerArgs = [
-                        '--module-path', classpath.asPath,
-                ]
-                classpath = files()
-            }
+    compileJava {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+            ]
+            classpath = files()
         }
+    }
 
-        compileTestJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                options.compilerArgs = [
-                        '--module-path', classpath.asPath,
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-                ]
-                classpath = files()
-            }
+    compileTestJava {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+                    '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+            ]
+            classpath = files()
         }
+    }
 
-        test {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                jvmArgs = [
-                        '--module-path', classpath.asPath,
-                        '--add-modules', 'ALL-MODULE-PATH',
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-                ]
-                classpath = files()
-            }
-        }
+    test {
+        useJUnitPlatform()
 
-        javadoc {
-            options.addStringOption('-module-path', classpath.asPath)
-            options.addStringOption('Xdoclint:all,-missing', '-html5')
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            jvmArgs = [
+                    '--module-path', classpath.asPath,
+                    '--add-modules', 'ALL-MODULE-PATH',
+                    '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+//                    '--add-opens', 'java.base/java.net=ALL-UNNAMED', // add the following VM parameters to the run configuration to avoid problems with the reflection restrictions in Java 9
+//                    '--add-opens', 'stroom.expression/stroom.dashboard.expression.v1=org.junit.platform.commons',
+            ]
+            classpath = files()
         }
+    }
+
+    javadoc {
+        options.addStringOption('-module-path', classpath.asPath)
+        options.addStringOption('Xdoclint:all,-missing', '-html5')
+    }
 
     jar {
         inputs.property("moduleName", moduleName)
